sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:3: error: not found: value n
  n= getTaille()
  ^DutchFlagAlgo:4: error: not found: value n
  for (i<-1 to n-1)
               ^DutchFlagAlgo:5: error: not found: value c
  {c=getCouleur(i)
   ^DutchFlagAlgo:6: error: not found: value c
  if (c== Color.blue)
      ^DutchFlagAlgo:10: error: not found: value c
   else if (c=Color.white) {var j=i ; while (j>=0 && getCouleur(j)!=Color.blue && getCouleur(j)!=Color.white )
            ^